src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Division__c</fullName>
        <label>Alternate Division</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Region__c</fullName>
        <label>Alternate Region</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Region__c</fullName>
        <label>Region</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>